# Geometry-graphs-Algorithms

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  test  test.cpp  vector.h
Core/: Plane.h  line.h  point.h  polygon.cpp  polygon.h  segment.h  vector.cpp  vector.h
Geo/: angle.cpp  angle.h  distance.h  geo_utils.cpp  geo_utils.h  intersection.cpp  intersection.h  triangulate.cpp  triangulate.h
Helper/: helper.cpp  helper.h
src/: main.cpp
src/Algorithms/: triangulation.cpp  triangulation.h
src/Geo/: angle.cpp  angle.h  distance.cpp  distance.h  geo_utils.cpp  geo_utils.h  intersection.cpp  intersection.h  triangulate.cpp  triangulate.h
src/Graphics/: camera.h  shader.cpp  shader.h
src/Helper/: helper.cpp  helper.h
src/Primitives/: Plane.h  line.cpp  line.h  polygon.h  segment.h  vector.cpp
